--- a/templates/register.html
+++ b/templates/register.html
@@ -9,12 +9,17 @@
     <center>
         <h1>registration form</h1>
 
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
+
                 {{ufo.as_p}}
                 {{pfo.as_p}}
             <input type="submit" value="register">
         </form>
     </center>
 </body>
+
+
+
+
 </html>
